// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepList > renders correctly  1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with bulletIcon & sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <svg
            class="emotion-6 emotion-7"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with bulletIcon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <svg
            class="emotion-6 emotion-7"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #727683;
  background: #e9eaeb;
  border: none;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <svg
            class="emotion-6 emotion-7"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #727683;
  background: #e9eaeb;
  border: none;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with small size 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 1.5rem;
  height: 1.5rem;
  font-size: 0.875rem;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 24px;
  font-size: 16px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          Item 1 small
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
